Fix z-index in tabs

--- a/src/scripts/OSFramework/Pattern/Tabs/scss/_tabs.scss
+++ b/src/scripts/OSFramework/Pattern/Tabs/scss/_tabs.scss
@@ -24,6 +24,7 @@
 				}
 
 				& > .osui-tabs__header__indicator {
+					z-index: 1;
 					left: 0;
 				}
 			}
@@ -45,6 +46,7 @@
 				}
 
 				& > .osui-tabs__header__indicator {
+					z-index: 1;
 					right: 0;
 				}
 			}
@@ -102,6 +104,7 @@
 		}
 
 		.osui-tabs__header__indicator {
+			z-index: 1;
 			bottom: 0;
 			min-width: 1px;
 			height: 2px;
@@ -142,8 +145,6 @@
 		height: -webkit-fit-content; // this is important to fix Safari render issues on onRender changes
 		min-height: 100%;
 		position: relative;
-		z-index: 1;
-
 		&-item {
 			align-items: center;
 			background-color: transparent;
@@ -207,7 +208,6 @@
 		position: relative;
 		scroll-snap-type: x mandatory;
 		width: 100%;
-		z-index: 0;
 
 		&::-webkit-scrollbar {
 			display: none;
